attendee/allow_all_nodetest2.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: nodetest2-allow
spec:
  ingress:
  - from:
    - namespaceSelector: {}
  podSelector:
    matchLabels:
      app: nodetest2
  policyTypes:
  - Ingress
