attendee/deny_namespaces.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: deny-other-namespaces
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
